[package]
name = "ptyknot"
version = "0.3.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = "Run a specified action as a controlled forked process."
repository = "http://github.com/BartMassey/ptyknot"
readme = "README.md"
keywords = ["pty", "pseudotty", "process"]
license-file = "LICENSE"
edition = "2018"

[lib]
name = "ptyknot"
path = "src/ptyknot.rs"

[dependencies]
libc = "0.2"
